--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build-ts": "./node_modules/.bin/tsc -p server --outDir build",
+    "watch-ts": "./node_modules/.bin/tsc -p server --outDir build -w",
+    "watch-node": "nodemon build/server.js",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot --prod --output-path build && npm run build-ts"
   },
   "private": true,
   "dependencies": {
@@ -19,7 +24,13 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@types/express": "^4.16.0",
+    "@types/mongodb": "^3.1.15",
+    "concurrently": "^4.1.0",
     "core-js": "^2.5.4",
+    "cors": "^2.8.5",
+    "mongodb": "^3.1.10",
+    "nodemon": "^1.18.7",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
