--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,16 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bulma/css/bulma.min.css",
               "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "node_modules",
+                "node_modules/bulma/sass/utilities",
+                "node_modules/bulma/"
+              ]
+            },
             "scripts": []
           },
           "configurations": {
