--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "~7.1.0",
     "@types/express": "^4.16.0",
     "@types/mongodb": "^3.1.15",
+    "bulma": "^0.7.2",
     "concurrently": "^4.1.0",
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
