--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node build/server.js",
     "build": "ng build",
     "build-ts": "./node_modules/.bin/tsc -p server --outDir build",
     "watch-ts": "./node_modules/.bin/tsc -p server --outDir build -w",
