--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "concurrently": "^4.1.0",
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
+    "express": "^4.16.4",
     "mongodb": "^3.1.10",
     "nodemon": "^1.18.7",
     "rxjs": "~6.3.3",
